# DocStats

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
docs/source/: conf.py  index.rst
docstats/: __init__.py
docstats/directives/: call_graph.py
