[tool.poetry]
name = "docstats"
version = "0.1.0"
description = "Statistics and other numbers for your sphinx pages"
authors = ["GameDungeon <gamedungeon@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
